--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+<button id="open">bouton</button>
+<button id="close">FERMER</button>
 
     <script src="app.js"></script>
 </body>
